<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="84dp"
        android:layout_height="88dp"
        android:text="@string/save_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/dateTxtInput"
        app:layout_constraintTop_toBottomOf="@+id/durationTxtInput"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <EditText
        android:id="@+id/durationTxtInput"
        android:layout_width="246dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/duration_label"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/dateTxtInput"
        android:layout_width="216dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/film_date"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationTxtInput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/categoryLabel"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/category_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisTxtInput"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/synopsisTxtInput"
        android:layout_width="235dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/synopsis_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/synopsisLabel"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/synopsisLabel"
        android:layout_width="83dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/synopsis_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxtInput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleLebel"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:text="@string/title_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/titleTxtInput"
        android:layout_width="248dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/title_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLebel"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:entries="@array/film_types_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryLabel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/modifyBtnCategory"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_category_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategory"
        app:layout_constraintTop_toBottomOf="@+id/categoryLabel"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>